BusOne/src/objects/VMobile_Home_Page_Layout_vod__c.object
<CustomObject>
    <description>Defines layouts for the VMobile home page. Content is controlled by placing specialized Marker Fields onto a Page Layout.</description>
    <fields>
        <fullName>zvod_alerts_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field that places the alerts content area on the Home page.</description>
        <label>zvod_alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_call_objectives_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on the page layout, the Call Objectives home page widget will display.</description>
        <label>zvod_call_objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_cycle_plan_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field that places the cycle plan summary content area on the Home page.</description>
        <label>zvod_cycle_plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_mc_activity_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This marker field corresponds to the Multichannel Activity component on the home page.</description>
        <label>zvod_mc_activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_salutation_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field that places the salutation and notifications content areas on the Home page.</description>
        <label>zvod_salutation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_suggestions_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker field that displays the Suggestions component</description>
        <label>zvod_suggestions_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_surveys_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If placed on the page layout, the Surveys home page widget will display.</description>
        <label>zvod_surveys_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_sync_stats_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This marker field corresponds to the Sync Stats component on the home page.</description>
        <label>zvod_sync_stats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_tasks_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field that places the tasks content area on the Home page.</description>
        <label>zvod_tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_terr_changes_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marker Field that places the territory adds/drops content area on the Home page.</description>
        <label>zvod_terr_changes</label>
        <type>Checkbox</type>
    </fields>
    <label>VMobile Home Page Layout</label>
    <nameField>
        <label>VMobile Home Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VMobile Home Page Layouts</pluralLabel>
    <recordTypes>
        <fullName>WindowsModern_vod</fullName>
        <active>true</active>
        <description>The page layout associated to this record type will be used for Windows Modern.</description>
        <label>WindowsModern_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>iPad_vod</fullName>
        <active>true</active>
        <description>The page layout associated to this record type will be used for iPad</description>
        <label>iPad_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>